--- a/src/main/java/com/sonlh15/qlct/view/Application.form
+++ b/src/main/java/com/sonlh15/qlct/view/Application.form
@@ -46,7 +46,7 @@
                 </properties>
                 <border type="bevel-raised"/>
                 <children>
-                  <grid id="59a1b" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="59a1b" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="1" left="1" bottom="1" right="1"/>
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -54,14 +54,19 @@
                     <properties/>
                     <border type="none" title="Ngày"/>
                     <children>
-                      <component id="16be0" class="javax.swing.JLabel">
+                      <component id="abced" class="javax.swing.JLabel" binding="lbDateTime">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <text value="23/04/2023"/>
+                          <text value="Label"/>
                         </properties>
                       </component>
+                      <hspacer id="a7c2f">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </hspacer>
                     </children>
                   </grid>
                   <grid id="574d8" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -72,7 +77,7 @@
                     <properties/>
                     <border type="none" title="Nội dung chi tiêu"/>
                     <children>
-                      <component id="5d26" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+                      <component id="5d26" class="javax.swing.JTextArea" binding="textContent">
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="50"/>
@@ -90,7 +95,7 @@
                         <properties/>
                         <border type="none" title="Chi phí"/>
                         <children>
-                          <component id="142d5" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+                          <component id="142d5" class="javax.swing.JTextField" binding="textFee">
                             <constraints>
                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                 <preferred-size width="150" height="-1"/>
